[tool.poetry]
name = "robot"
version = "0.1.0"
description = ""
authors = ["Silvio Mueller <silvio.andreas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyserial-asyncio = "0.6"
dynamixel-sdk = "^3.7.31"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}


[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
docker-compose = "1.29.2"
pytest-cov = "^4.0.0"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
